--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,10 @@
             <div class="pure-u-1" id="logo">
                 <h1 href="/" class="pure-menu-heading">Yuki Youtube</h1>
             <a href="/bbs">掲示板</a>
+             <a href="https://discord.gg/5j7EVWXQGP">Yuki Youtube開発部discordサーバーはこちらから</a>
+            <a href="https://service.lsapp.space/konomi/?s=i3352392&i=448742">Yuki Youtube公式konomi</a>
+            <a href="https://www.chatwork.com/g/Yuki_BBS_7th">Yuki Youtube公式chatwork</a>
+            <a href="https://rvlt.gg/RRTq8aKF">Yuki Youtube公式revolt</a>
             </div>
             <div class="pure-u-1-4"></div>
             <div class="pure-u-1 pure-u-md-12-24 searchbar">
