--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,8 @@
         <div class="pure-g h-box" id="search-widget">
             <div class="pure-u-1" id="logo">
                 <h1 href="/" class="pure-menu-heading">Yuki Youtube</h1>
-            <a href="/bbs">掲示板</a></br>
+                            <a href="/bbs">掲示板(規制回避サイトの教え合いなども行ってるので来てみてください)</a></br>
+
              <a href="https://discord.gg/5j7EVWXQGP">Yuki Youtube開発部discordサーバーはこちらから</a></br>
             <a href="https://service.lsapp.space/konomi/?s=i3352392&i=448742">Yuki Youtube公式konomi</a></br>
             <a href="https://www.chatwork.com/g/Yuki_BBS_7th">Yuki Youtube公式chatwork</a></br>
