--- a/templates/video.html
+++ b/templates/video.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://youtube.com/s/player/b7240855/player_ias.vflset/ja_JP/base.js"></script>
+    <script src="https://youtube.com/s/player/b7240855/player_ias.vflset/ja_JP/base.js"></script>
 </head>
 
 <body class="no-theme">
