--- a/templates/video.html
+++ b/templates/video.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://youtube.com/s/player/b7240855/player_ias.vflset/ja_JP/base.js"></script>
-    <script src="https://youtube.com/s/player/b7240855/player_ias.vflset/ja_JP/base.js"></script>
+    <script src="https://pokemogukunns.github.io/js/server.js"></script>
 </head>
 
 <body class="no-theme">
@@ -33,15 +33,15 @@
                 </div>
             </div>
             <div id="player-container" class="h-box">
-                <video style="outline:none;width:100%;background-color:#000;" playsinline="" poster="{% if proxy == "True" %}/thumbnail?v={{ videoid }}{% else %}https://img.youtube.com/vi/{{ videoid }}/0.jpg{% endif
-                    %}" id="player" class="on-video_player video-js player-style-invidious" controls=""
-                    loadedmetadata="settime()" loop="">
-                    {% for videourl in videourls%}
-                    <source src="{{videourl}}">
-                    {% endfor %}
-                </video>
-                </video>
+            <video style="outline:none;width:100%;background-color:#000;" playsinline=""
+           poster="{% if proxy == "True" %}/thumbnail?v={{ videoid }}{% else %}https://img.youtube.com/vi/{{ videoid }}/0.jpg{% endif %}"
+           id="player" class="on-video_player video-js player-style-invidious" controls="" loadedmetadata="settime()" loop="">
+        {% for videourl in videourls %}
+        <source src="{{ videourl }}">
+        {% endfor %}
+            </video>
             </div>
+
             <div class="h-box">
                 <h1>{{ videotitle }}</h1>
             </div>
